--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 </head>
 <body>
     <h1>
-        <center>helloworld~!</center>
+        <center>행운이 관찰일지</center>
     </h1>
-    <h2>wellcome to hot dog world~~<br>☆*: .｡. o(≧▽≦)o .｡.:*☆</h2>
-    <h3>제봉이 바보야(*/ω＼*)</h3>
     <br>
-    <h4>나는 행운이가 좋습니다.</h4>
-    <h1>이제 종료하겠습니다.</h1>
-    <img src="고양이.jpg">
+    <h4>
+        1. 행운이는 고양이다.<br>
+        2. 행운이는 잠이 많다.<br>
+        3. 행운이는 바보다.<br>
+        4. 행운이는 <u>귀엽다.</u><br>
+        5. 행운이는 본인이 필요할때만 애교부린다.<br>
+    </h4>
+    <h3>😶결론😶</h3>
+    <h4>
+        행운이는 제봉이와 동밍이의 사랑스러운 딸래미(❁´◡`❁)
+    </h4>
+    <img src="C:\Users\82104\Desktop\웹퍼블리셔\행운이 어흥.jpg">
 
 </body>
 </html>
